Fix: Resolve OpenVPN server initialization issues
- Fix docker-compose.yml to use external volume (prevents prefixed volume issues)
- Add required devices and sysctls for TUN device access
- Update init-openvpn.sh to use standard ovpn_genconfig approach
- Add P2P configuration step to ensure client-to-client communication
- Verified working: server startup, client creation, status monitoring

Tested end-to-end following README instructions as normal user.
All functionality working correctly including P2P-only setup.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,11 @@ services:
       - openvpn-data:/etc/openvpn
     cap_add:
       - NET_ADMIN
+    devices:
+      - /dev/net/tun
+    sysctls:
+      - net.ipv6.conf.default.forwarding=1
+      - net.ipv6.conf.all.forwarding=1
     restart: unless-stopped
     environment:
       - EASYRSA_BATCH=1
@@ -20,4 +25,4 @@ networks:
 
 volumes:
   openvpn-data:
-    driver: local
+    external: true
