feat: Add comprehensive TCP/UDP protocol support
• Add OPENVPN_PROTOCOL option to .env (udp/tcp)
• Update init-openvpn.sh to support both protocols with user feedback
• Modify docker-compose.yml for dynamic protocol/port configuration
• Add comprehensive README documentation for protocol selection
• Include Docker image badge linking to kylemanna/openvpn
• Add protocol-specific troubleshooting and use cases
• Support common ports: 1194/UDP (default) and 443/TCP (corporate)

Features:
- UDP: Faster, better for gaming/streaming, default OpenVPN protocol
- TCP: More reliable, works through proxies, better for corporate networks
- Dynamic port mapping based on protocol selection
- User-friendly protocol selection with explanations
- Complete documentation with comparison table

Tested both UDP and TCP modes successfully.

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,12 @@
 # OpenVPN Server Configuration
 # Copy this file to .env and customize the values
 
-# Port for OpenVPN server (default: 1194)
+# Protocol for OpenVPN server (udp or tcp)
+# UDP: Faster, better for gaming/streaming, default for OpenVPN
+# TCP: More reliable, better for restrictive networks/firewalls
+OPENVPN_PROTOCOL=udp
+
+# Port for OpenVPN server (default: 1194 for UDP, 443 for TCP)
 OPENVPN_PORT=1194
 
 # Your server's public domain or IP address
@@ -12,9 +17,14 @@ VPN_DOMAIN=your-server.example.com
 VPN_NETWORK=10.8.0.0
 VPN_SERVER_IP=10.8.0.1
 
-# Alternative port if 1194 is blocked
-# Uncomment and change if needed
+# Alternative configurations for different use cases:
+# For restrictive networks (TCP + port 443):
+# OPENVPN_PROTOCOL=tcp
 # OPENVPN_PORT=443
+
+# For gaming/streaming (UDP + port 1194 - default):
+# OPENVPN_PROTOCOL=udp
+# OPENVPN_PORT=1194
 
 # Docker-compose project name (optional)
 # COMPOSE_PROJECT_NAME=openvpn
