feat: Add configurable duplicate-cn support for multiple device connections
- Add ALLOW_DUPLICATE_CN configuration option to .env and .env.example
- Allow users to enable/disable multiple concurrent connections per certificate
- Default to false (secure mode) - one connection per certificate
- When enabled, users can connect from multiple devices with same certificate
- Add clear documentation about security implications and trade-offs
- Update init-openvpn.sh to conditionally add duplicate-cn directive
- Provide visual feedback during initialization about current setting

Security considerations:
- false (default): More secure, can revoke individual devices
- true: Convenient but higher risk, cannot revoke individual devices

Usage:
- Edit .env: ALLOW_DUPLICATE_CN=true for multi-device support
- Edit .env: ALLOW_DUPLICATE_CN=false for maximum security (default)

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,16 @@ VPN_DOMAIN=your-server.example.com
 VPN_NETWORK=10.8.0.0
 VPN_SERVER_IP=10.8.0.1
 
+# Allow multiple connections per certificate (duplicate-cn)
+# true: One certificate can be used on multiple devices simultaneously
+#       - Convenient for users with phone, laptop, desktop, etc.
+#       - Higher security risk if one device is compromised
+#       - Cannot revoke individual devices
+# false: One connection per certificate (default OpenVPN behavior)
+#        - More secure, can revoke individual device access
+#        - Need separate certificates for each device
+ALLOW_DUPLICATE_CN=false
+
 # Alternative configurations for different use cases:
 # For restrictive networks (TCP + port 443):
 # OPENVPN_PROTOCOL=tcp
