Fix VPN network configuration to use custom subnet from .env
- Add -s parameter to ovpn_genconfig to use VPN_NETWORK from .env file
- Update docker-compose.yml to include all VPN environment variables
- Fix issue where VPN was using default 192.168.255.0/24 instead of configured 10.8.0.0/24 network
- Improve subnet mask handling in init-openvpn.sh

This ensures the VPN server uses the network range specified in .env (10.8.0.0/24)
instead of defaulting to 192.168.x.x ranges.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,10 @@ services:
       - EASYRSA_BATCH=1
       - OPENVPN_PROTOCOL=${OPENVPN_PROTOCOL:-udp}
       - OPENVPN_PORT=${OPENVPN_PORT:-1194}
+      - VPN_NETWORK=${VPN_NETWORK:-10.8.0.0}
+      - VPN_SERVER_IP=${VPN_SERVER_IP:-10.8.0.1}
+      - VPN_DOMAIN=${VPN_DOMAIN:-vpn.example.com}
+      - ALLOW_DUPLICATE_CN=${ALLOW_DUPLICATE_CN:-false}
     networks:
       - openvpn-network
 
