feat: Add host service access functionality to OpenVPN P2P setup
- Add configure-host-access.sh script for automatic host access configuration
- Update init-openvpn.sh to call host access configuration during setup
- Add HOST_ACCESS_GUIDE.md with comprehensive documentation and examples
- Update README.md with host access documentation and usage examples
- Modify docker-compose.yml to include host gateway and HOST_IP environment variable
- Simplify .env.example with new HOST_IP configuration option

This enables VPN clients to access Docker host services (e.g., web apps, databases)
at 172.17.0.1 while maintaining existing P2P functionality between clients.

Key features:
- Automatic Docker bridge IP detection
- Configurable host access (enabled by default)
- Comprehensive documentation and troubleshooting guide
- Preserves existing P2P communication functionality

--- a/.env.example
+++ b/.env.example
@@ -1,40 +1,14 @@
-# OpenVPN Server Configuration
-# Copy this file to .env and customize the values
+# OpenVPN Protocol Configuration
+OPENVPN_PROTOCOL=udp               # udp (fast) or tcp (reliable)
+OPENVPN_PORT=1194                  # 1194 for UDP, 443 for TCP recommended
 
-# Protocol for OpenVPN server (udp or tcp)
-# UDP: Faster, better for gaming/streaming, default for OpenVPN
-# TCP: More reliable, better for restrictive networks/firewalls
-OPENVPN_PROTOCOL=udp
+# Server Configuration
+VPN_DOMAIN=your-server.example.com # Your server's public IP or domain
+VPN_NETWORK=10.8.0.0               # Internal VPN network range
+VPN_SERVER_IP=10.8.0.1             # VPN server's internal IP
 
-# Port for OpenVPN server (default: 1194 for UDP, 443 for TCP)
-OPENVPN_PORT=1194
+# Host Access Configuration
+HOST_IP=172.17.0.1                 # Docker host IP (usually docker0 bridge IP)
 
-# Your server's public domain or IP address
-# This is what clients will connect to
-VPN_DOMAIN=your-server.example.com
-
-# VPN network settings
-VPN_NETWORK=10.8.0.0
-VPN_SERVER_IP=10.8.0.1
-
-# Allow multiple connections per certificate (duplicate-cn)
-# true: One certificate can be used on multiple devices simultaneously
-#       - Convenient for users with phone, laptop, desktop, etc.
-#       - Higher security risk if one device is compromised
-#       - Cannot revoke individual devices
-# false: One connection per certificate (default OpenVPN behavior)
-#        - More secure, can revoke individual device access
-#        - Need separate certificates for each device
-ALLOW_DUPLICATE_CN=false
-
-# Alternative configurations for different use cases:
-# For restrictive networks (TCP + port 443):
-# OPENVPN_PROTOCOL=tcp
-# OPENVPN_PORT=443
-
-# For gaming/streaming (UDP + port 1194 - default):
-# OPENVPN_PROTOCOL=udp
-# OPENVPN_PORT=1194
-
-# Docker-compose project name (optional)
-# COMPOSE_PROJECT_NAME=openvpn
+# Security Configuration  
+ALLOW_DUPLICATE_CN=false           # false (secure) or true (convenient)
