--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - net.ipv6.conf.default.forwarding=1
       - net.ipv6.conf.all.forwarding=1
     restart: unless-stopped
+    extra_hosts:
+      - "docker-host:host-gateway"
     environment:
       - EASYRSA_BATCH=1
       - OPENVPN_PROTOCOL=${OPENVPN_PROTOCOL:-udp}
@@ -22,6 +24,7 @@ services:
       - VPN_SERVER_IP=${VPN_SERVER_IP:-10.8.0.1}
       - VPN_DOMAIN=${VPN_DOMAIN:-vpn.example.com}
       - ALLOW_DUPLICATE_CN=${ALLOW_DUPLICATE_CN:-false}
+      - HOST_IP=${HOST_IP:-172.17.0.1}
     networks:
       - openvpn-network
 
