--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   openvpn:
     image: kylemanna/openvpn:latest
@@ -24,6 +26,7 @@ services:
       - VPN_SERVER_IP=${VPN_SERVER_IP:-10.8.0.1}
       - VPN_DOMAIN=${VPN_DOMAIN:-vpn.example.com}
       - ALLOW_DUPLICATE_CN=${ALLOW_DUPLICATE_CN:-false}
+    privileged: true
     networks:
       - openvpn-network
 
