Simplify OpenVPN setup with host networking
- Replace complex bridge networking with simple host networking
- Remove all port forwarding complexity and scripts
- Delete unnecessary documentation and forwarding guides
- Simplify docker-compose.yml to use network_mode: host
- Clean up .env files to remove forwarding variables
- Remove container-forwarding.sh, manage-vpn-forwarding.sh, and related scripts
- Create concise README focusing on essential functionality
- Enable direct host access at 10.8.0.1 via host networking
- Maintain P2P communication and security features
- Reduce project complexity while preserving core functionality

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,15 @@
-version: '3.8'
-
 services:
   openvpn:
     image: kylemanna/openvpn:latest
     container_name: openvpn-server
-    ports:
-      - "${OPENVPN_PORT:-1194}:1194/${OPENVPN_PROTOCOL:-udp}"
+    network_mode: host
     volumes:
       - openvpn-data:/etc/openvpn
     cap_add:
       - NET_ADMIN
     devices:
       - /dev/net/tun
-    sysctls:
-      - net.ipv6.conf.default.forwarding=1
-      - net.ipv6.conf.all.forwarding=1
     restart: unless-stopped
-    extra_hosts:
-      - "docker-host:host-gateway"
     environment:
       - EASYRSA_BATCH=1
       - OPENVPN_PROTOCOL=${OPENVPN_PROTOCOL:-udp}
@@ -27,12 +19,6 @@ services:
       - VPN_DOMAIN=${VPN_DOMAIN:-vpn.example.com}
       - ALLOW_DUPLICATE_CN=${ALLOW_DUPLICATE_CN:-false}
     privileged: true
-    networks:
-      - openvpn-network
-
-networks:
-  openvpn-network:
-    driver: bridge
 
 volumes:
   openvpn-data:
