Add TUN device name and compression configuration options
- Add TUN_DEVICE_NAME option to configure custom device names (tun0, tun1, etc.)
- Add ENABLE_COMPRESSION option to enable/disable LZO compression (default: false)
- Update .env and .env.example with new configuration variables
- Modify docker-compose.yml to pass new environment variables
- Update init-openvpn.sh to handle device name and compression settings
- Add proper environment variable precedence (command line > .env > defaults)
- Document new options in README with usage examples
- Compression disabled by default for better compatibility
- Based on kylemanna/openvpn Docker image capabilities

--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,9 @@ VPN_DOMAIN=your-server.example.com # Your server's public IP or domain
 VPN_NETWORK=10.8.0.0               # Internal VPN network range
 VPN_SERVER_IP=10.8.0.1             # VPN server's internal IP
 
+# Network Device Configuration
+TUN_DEVICE_NAME=tun0               # TUN device name (tun0, tun1, etc.)
+ENABLE_COMPRESSION=false           # Enable/disable compression (true for LZO/LZ4)
+
 # Security Configuration  
 ALLOW_DUPLICATE_CN=false           # false (secure) or true (convenient)
