--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,11 @@
-version: '3.8'
-
 services:
   openvpn:
     image: kylemanna/openvpn:latest
     container_name: openvpn-server
-    network_mode: host
+    networks:
+      - openvpn-network
+    ports:
+      - "${OPENVPN_PORT:-1194}:${OPENVPN_PORT:-1194}/${OPENVPN_PROTOCOL:-udp}"
     volumes:
       - openvpn-data:/etc/openvpn
     cap_add:
@@ -22,7 +23,11 @@ services:
       - TUN_DEVICE_NAME=${TUN_DEVICE_NAME:-tun0}
       - ENABLE_COMPRESSION=${ENABLE_COMPRESSION:-false}
       - ALLOW_DUPLICATE_CN=${ALLOW_DUPLICATE_CN:-false}
-    privileged: true
+
+networks:
+  openvpn-network:
+    driver: bridge
+    name: openvpn-network
 
 volumes:
   openvpn-data:
