📝 Update .env.example with static IP configuration options
Added static IP configuration section to .env.example file to include:
• ENABLE_STATIC_IPS - Enable/disable static IP support
• STATIC_IP_RANGE_START/END - Define static IP address range
• DYNAMIC_IP_RANGE_START/END - Define dynamic IP address range

This ensures new users have proper example configuration for the
static IP assignment feature.

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,10 @@ ENABLE_COMPRESSION=false           # Enable/disable compression (true for LZO/LZ
 
 # Security Configuration  
 ALLOW_DUPLICATE_CN=false           # false (secure) or true (convenient)
+
+# Static IP Configuration
+ENABLE_STATIC_IPS=true             # Enable client-config-dir for static IPs
+STATIC_IP_RANGE_START=10.8.0.50    # Start of static IP range
+STATIC_IP_RANGE_END=10.8.0.200     # End of static IP range
+DYNAMIC_IP_RANGE_START=10.8.0.10   # Start of dynamic IP range  
+DYNAMIC_IP_RANGE_END=10.8.0.49     # End of dynamic IP range
