🔧 Major OpenVPN System Improvements & Windows DCO Fixes
✅ Windows DCO Compatibility Fixes:
- Fixed compression conflicts with DCO (comp-lzo no)
- Added Windows driver optimization (windows-driver wintun)
- Resolved topology mismatch issues (topology net30)
- Fixed ifconfig subnet validation errors

✅ Linux IP Assignment Fixes:
- Resolved 'Linux can't add IP to interface' errors
- Fixed topology compatibility between server/client versions
- Added TUN device conflict resolution

✅ Script Enhancements:
- backup-openvpn.sh: Fixed path resolution, added integrity verification
- init-openvpn.sh: Added compression controls, DCO compatibility
- manage-client.sh: Added input validation, fixed CCD generation
- status-openvpn.sh: Added CA expiry monitoring (30-day warnings)
- docker-compose.yml: Added health checks, resource limits, logging

✅ New Features:
- .env.socat.example: Comprehensive socat relay configuration template
- Enhanced error handling and user feedback
- Improved security and monitoring capabilities

✅ Documentation & Security:
- Updated .gitignore to exclude sensitive config files
- Added comprehensive usage examples and troubleshooting
- Enhanced security best practices

🎯 Result: Production-ready OpenVPN P2P system with full Windows DCO support, comprehensive monitoring, and enterprise-grade reliability.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,25 @@ services:
     devices:
       - /dev/net/tun
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "pgrep openvpn || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+          cpus: '0.5'
+        reservations:
+          memory: 128M
+          cpus: '0.25'
+    logging:
+      driver: json-file
+      options:
+        max-size: 10m
+        max-file: 3
     environment:
       - EASYRSA_BATCH=1
       - OPENVPN_PROTOCOL=${OPENVPN_PROTOCOL:-udp}
